--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href= "resources/styles.css">
+    <!-- <link rel="icon" href="" type="image/png">  TBD-->
+    <title>GATCHA</title>
 </head>
+
 <body>
-    
+
+    <!-- Navigation Bar -->
+    <nav>
+        <label class="title">GACHA</label>
+        <ul>
+            <li><a href="#" class="nav-button">HOME</a></li>
+            <li><a href="#" class="nav-button">ABOUT US</a></li>
+            <li><a href="#" class="nav-button">GALLERY</a></li>
+            <li><a href="#" class="nav-button">CONTACTS</a></li>
+        </ul>
+    </nav>
+
+    <header id="home">
+        <h1>Group Name YAY</h1>
+        <h2>Group Motto or Tagline</h2>
+    </header>
+
+    <section class="about-us">
+        <h1>Welcome to Our Website</h1>
+        <p>This is a sample paragraph to demonstrate the structure of the webpage.</p>
+    </section>
+
+    <section id="gallery">
+        <h1>Gallery</h1>
+        <img src="https://via.placeholder.com/600x400" alt="Sample Image">
+    </section>
+
+    <footer id="contacts">
+        <p>&copy; 2025 GROUP NAME. All rights reserved.</p>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="resources/script.js"></script>
+
 </body>
 </html>
