--- a/lab1/index.html
+++ b/lab1/index.html
@@ -13,21 +13,22 @@
 
     <!-- Navigation Bar -->
     <nav>
-        <label class="title">GACHA</label>
+        <h1 class="title"><a href="#home">✦ GAT₵HA ✦</a></h1>
         <ul>
-            <li><a href="#" class="nav-button">HOME</a></li>
-            <li><a href="#" class="nav-button">ABOUT US</a></li>
-            <li><a href="#" class="nav-button">GALLERY</a></li>
-            <li><a href="#" class="nav-button">CONTACTS</a></li>
+            <li><a href="#home" class="nav-button">HOME</a></li>
+            <li><a href="#about-us" class="nav-button">ABOUT US</a></li>
+            <li><a href="#gallery" class="nav-button">GALLERY</a></li>
+            <li><a href="#contacts" class="nav-button">CONTACTS</a></li>
         </ul>
     </nav>
 
     <header id="home">
-        <h1>Group Name YAY</h1>
-        <h2>Group Motto or Tagline</h2>
+        <h1>Mahjonging 🀄</h1>
+        <h2>99% of Gamblers Quit Before the Win Big.</h2>
+        <h3>Be the 1% that Wins Big!</h3>
     </header>
 
-    <section class="about-us">
+    <section id="about-us">
         <h1>Welcome to Our Website</h1>
         <p>This is a sample paragraph to demonstrate the structure of the webpage.</p>
     </section>
