--- a/lab1/index.html
+++ b/lab1/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href= "resources/styles.css">
     <!-- <link rel="icon" href="" type="image/png">  TBD-->
-    <title>GATCHA</title>
+    <title>✦ GAT₵HA ✦</title>
 </head>
 
 <body>
