--- a/lab1/index.html
+++ b/lab1/index.html
@@ -24,7 +24,7 @@
 
     <header id="home">
         <h1>Mahjonging 🀄</h1>
-        <h2>99% of Gamblers Quit Before the Win Big.</h2>
+        <h2>99% of Gamblers Quit Before they Win Big.</h2>
         <h3>Be the 1% that Wins Big!</h3>
     </header>
 
