[Update] Add logo, Formatting, Add projects, Add members

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href= "resources/styles.css">
-    <!-- <link rel="icon" href="" type="image/png">  TBD-->
+    <link rel="stylesheet" href="resources/styles.css">
+    <!-- <link rel="icon" href="images/webSysLogo.png" type="image/png">  TBD -->
     <title>✦ GAT₵HA ✦</title>
 </head>
 
@@ -13,7 +13,11 @@
 
     <!-- Navigation Bar -->
     <nav>
-        <h1 class="title"><a href="#home">✦ GAT₵HA ✦</a></h1>
+        <h1 class="title" style="margin-left: -65px;">
+            <a href="#home">
+            <img src="images/webSysLogo.png" alt="GAT₵HA Logo" style="width: 50%;" />
+            </a>
+        </h1>
         <ul>
             <li><a href="#home" class="nav-button">HOME</a></li>
             <li><a href="#about-us" class="nav-button">ABOUT US</a></li>
@@ -23,19 +27,88 @@
     </nav>
 
     <header id="home">
+        <h1 style="font-size: 3rem;">✦ GAT₵HA ✦ </h1>
+        <div class="vertical-line"></div>
         <h1>Mahjonging 🀄</h1>
         <h2>99% of Gamblers Quit Before they Win Big.</h2>
         <h3>Be the 1% that Wins Big!</h3>
     </header>
 
     <section id="about-us">
-        <h1>Welcome to Our Website</h1>
-        <p>This is a sample paragraph to demonstrate the structure of the webpage.</p>
+        <h1 style="font-size: 2.7rem;">OUR PROJECTS</h1>
+        <div class="projects">
+            <div class="project">
+                <div class="project-image"><img src="images/eighth.png" id="profile" alt="8th Wonder Website"></div>
+                <div class="project-title"><a href = "https://github.com/RPI-ITWS/ITWS1100-S25-team04" style="text-decoration: none; color: #B87432;">8th wonder website</a></div>
+                <div class="project-desc">
+
+                </div>
+            </div>
+
+            <div class="project">
+                <div class="project-image"><img src="images/dathan_project.png" id = "profile"></div>
+                <div class="project-title"><a href="https://atypicality.github.io/WebSystemsFall2025_DathanLang/" style="text-decoration: none; color: #B87432;">Personal website</a></div>
+                <div class="project-desc">
+                </div>
+            </div>
+
+            <div class="project">
+                <div class="project-image"></div>
+                <div class="project-title">Project name</div>
+                <div class="project-desc">
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="gallery">
-        <h1>Gallery</h1>
-        <img src="https://via.placeholder.com/600x400" alt="Sample Image">
+        <h1 style="font-size: 2.7rem;">MEET OUR TEAM</h1>
+        <div class="projects">
+            <div class="project">
+                <div class="project-image"><img src="images/Jodie.jpg" id = "profile"></div>
+                <div class="project-title">Jodie Cho</div>
+                <div class="project-desc">
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-image"><img src="images/dathan.jpg" id = "profile"></div>
+                <div class="project-title">Dathan Lang</div>
+                <div class="project-desc">
+
+                </div>
+            </div>
+
+
+            <div class="project">
+                <div class="project-image"><img src="images/Lala.jpg" id = "profile1"></div>
+                <div class="project-title">Lala Liu</div>
+                <div class="project-desc">
+                </div>
+            </div>
+        </div>
+        <div class="projects2">
+            <div class="project">
+                <div class="project-image"><img src="images/somey.JPG" id = "profile2"></div>
+                <div class="project-title">Somey Dong</div>
+                <div class="project-desc">
+
+                </div>
+            </div>
+
+            <div class="project">
+                <div class="project-image"><img src="images/oliver.JPG" id = "profile"></div>
+                <div class="project-title">Oliver Crotty</div>
+                <div class="project-desc">
+                </div>
+            </div>
+
+            <div class="project">
+                <div class="project-image"></div>
+                <div class="project-title">Zhimin Jiang</div>
+                <div class="project-desc">
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer id="contacts">
@@ -46,4 +119,5 @@
     <script src="resources/script.js"></script>
 
 </body>
+
 </html>
