[Update] fix navbar, put one more project

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -20,8 +20,8 @@
         </h1>
         <ul>
             <li><a href="#home" class="nav-button">HOME</a></li>
+            <li><a href="#gallery" class="nav-button">OUR PROJECTS</a></li>
             <li><a href="#about-us" class="nav-button">ABOUT US</a></li>
-            <li><a href="#gallery" class="nav-button">GALLERY</a></li>
             <li><a href="#contacts" class="nav-button">CONTACTS</a></li>
         </ul>
     </nav>
@@ -34,7 +34,7 @@
         <h3>Be the 1% that Wins Big!</h3>
     </header>
 
-    <section id="about-us">
+    <section id="gallery">
         <h1 style="font-size: 2.7rem;">OUR PROJECTS</h1>
         <div class="projects">
             <div class="project">
@@ -53,15 +53,15 @@
             </div>
 
             <div class="project">
-                <div class="project-image"></div>
-                <div class="project-title">Project name</div>
+                <div class="project-image"><img src="images/Lalaproejct.png" id="profile" alt="Project Name"></div>
+                <div class="project-title">Schedule Sharing</div>
                 <div class="project-desc">
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="gallery">
+    <section id="about-us">
         <h1 style="font-size: 2.7rem;">MEET OUR TEAM</h1>
         <div class="projects">
             <div class="project">
