added personal link and a brief description of the group to the README.md, added a draft of a log to lab1.md, did some small edits to the main page (ie changed the order of the about-me and gallery tags and added ScheduleSync thumbnail to projects)

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -34,12 +34,12 @@
         <h3>Be the 1% that Wins Big!</h3>
     </header>
 
-    <section id="about-us">
+    <section id="gallery">
         <h1 style="font-size: 2.7rem;">OUR PROJECTS</h1>
         <div class="projects">
             <div class="project">
                 <div class="project-image"><img src="images/eighth.png" id="profile" alt="8th Wonder Website"></div>
-                <div class="project-title"><a href = "https://github.com/RPI-ITWS/ITWS1100-S25-team04" style="text-decoration: none; color: #B87432;">8th wonder website</a></div>
+                <div class="project-title"><a href = "https://github.com/RPI-ITWS/ITWS1100-S25-team04" style="text-decoration: none; color: #B87432;">8th Wonder Website</a></div>
                 <div class="project-desc">
 
                 </div>
@@ -47,21 +47,21 @@
 
             <div class="project">
                 <div class="project-image"><img src="images/dathan_project.png" id = "profile"></div>
-                <div class="project-title"><a href="https://atypicality.github.io/WebSystemsFall2025_DathanLang/" style="text-decoration: none; color: #B87432;">Personal website</a></div>
+                <div class="project-title"><a href="https://atypicality.github.io/WebSystemsFall2025_DathanLang/" style="text-decoration: none; color: #B87432;">Personal Website</a></div>
                 <div class="project-desc">
                 </div>
             </div>
 
             <div class="project">
-                <div class="project-image"></div>
-                <div class="project-title">Project name</div>
+                <div class="project-image"><img src="images/scheduleSyncLogo.png" id="profile"></div>
+                <div class="project-title"><a href="https://github.com/RPI-ITWS/ITWS1100-F24-team01" style="text-decoration: none; color: #B87432;">ScheduleSync Website</a></div>
                 <div class="project-desc">
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="gallery">
+    <section id="about-us">
         <h1 style="font-size: 2.7rem;">MEET OUR TEAM</h1>
         <div class="projects">
             <div class="project">
@@ -89,7 +89,7 @@
         <div class="projects2">
             <div class="project">
                 <div class="project-image"><img src="images/somey.JPG" id = "profile2"></div>
-                <div class="project-title">Somey Dong</div>
+                <div class="project-title">SoMey Dong</div>
                 <div class="project-desc">
 
                 </div>
@@ -112,7 +112,7 @@
     </section>
 
     <footer id="contacts">
-        <p>&copy; 2025 GROUP NAME. All rights reserved.</p>
+        <p>&copy; 2025 Gatcha!. All rights reserved.</p>
     </footer>
 
     <!-- Scripts -->
