[Fix] Changed id profile to class profile

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="project">
-                <div class="project-image"><img src="images/dathan_project.png" id = "profile"></div>
+                <div class="project-image"><img src="images/dathan_project.png" class = "profile"></div>
                 <div class="project-title"><a href="https://atypicality.github.io/WebSystemsFall2025_DathanLang/" style="text-decoration: none; color: #B87432;">Personal website</a></div>
                 <div class="project-desc">
                 </div>
@@ -65,13 +65,13 @@
         <h1 style="font-size: 2.7rem;">MEET OUR TEAM</h1>
         <div class="projects">
             <div class="project">
-                <div class="project-image"><img src="images/Jodie.jpg" id = "profile"></div>
+                <div class="project-image"><img src="images/Jodie.jpg" class = "profile"></div>
                 <div class="project-title">Jodie Cho</div>
                 <div class="project-desc">
                 </div>
             </div>
             <div class="project">
-                <div class="project-image"><img src="images/dathan.jpg" id = "profile"></div>
+                <div class="project-image"><img src="images/dathan.jpg" class = "profile"></div>
                 <div class="project-title">Dathan Lang</div>
                 <div class="project-desc">
 
@@ -80,7 +80,7 @@
 
 
             <div class="project">
-                <div class="project-image"><img src="images/Lala.jpg" id = "profile1"></div>
+                <div class="project-image"><img src="images/Lala.jpg" class = "profile1"></div>
                 <div class="project-title">Lala Liu</div>
                 <div class="project-desc">
                 </div>
@@ -88,7 +88,7 @@
         </div>
         <div class="projects2">
             <div class="project">
-                <div class="project-image"><img src="images/somey.JPG" id = "profile2"></div>
+                <div class="project-image"><img src="images/somey.JPG" class = "profile2"></div>
                 <div class="project-title">Somey Dong</div>
                 <div class="project-desc">
 
@@ -96,7 +96,7 @@
             </div>
 
             <div class="project">
-                <div class="project-image"><img src="images/oliver.JPG" id = "profile"></div>
+                <div class="project-image"><img src="images/oliver.JPG" class = "profile"></div>
                 <div class="project-title">Oliver Crotty</div>
                 <div class="project-desc">
                 </div>
