--- a/lab1/index.html
+++ b/lab1/index.html
@@ -38,7 +38,7 @@
         <h1 style="font-size: 2.7rem;">OUR PROJECTS</h1>
         <div class="projects">
             <div class="project">
-                <div class="project-image"><img src="images/eighth.png" id="profile" alt="8th Wonder Website"></div>
+                <div class="project-image"><img src="images/eighth.png" class="profile" alt="8th Wonder Website"></div>
                 <div class="project-title"><a href = "https://github.com/RPI-ITWS/ITWS1100-S25-team04" style="text-decoration: none; color: #B87432;">8th wonder website</a></div>
                 <div class="project-desc">
 
@@ -53,7 +53,7 @@
             </div>
 
             <div class="project">
-                <div class="project-image"><img src="images/Lalaproejct.png" id="profile" alt="Project Name"></div>
+                <div class="project-image"><img src="images/Lalaproejct.png" class="profile" alt="Project Name"></div>
                 <div class="project-title">Schedule Sharing</div>
                 <div class="project-desc">
                 </div>
