--- a/lab1/index.html
+++ b/lab1/index.html
@@ -15,7 +15,7 @@
     <nav>
         <h1 class="title" style="margin-left: -65px;">
             <a href="#home">
-            <img src="images/webSysLogo.png" alt="GAT₵HA Logo" style="width: 50%;" />
+                <img src="images/webSysLogo.png" alt="GAT₵HA Logo" style="width: 50%;" />
             </a>
         </h1>
         <ul>
@@ -39,18 +39,24 @@
         <div class="projects">
             <div class="project">
                 <div class="project-image"><img src="images/eighth.png" class="profile" alt="8th Wonder Website"></div>
-                <div class="project-title"><a href = "https://github.com/RPI-ITWS/ITWS1100-S25-team04" style="text-decoration: none; color: #B87432;">8th wonder website</a></div>
+                <div class="project-title"><a href="https://github.com/RPI-ITWS/ITWS1100-S25-team04"
+                        style="text-decoration: none; color: #B87432;">8th Wonder Website</a></div>
+                <div class="project-desc">
+
+                </div>
             </div>
 
             <div class="project">
-                <div class="project-image"><img src="images/dathan_project.png" class = "profile"></div>
-                <div class="project-title"><a href="https://atypicality.github.io/WebSystemsFall2025_DathanLang/" style="text-decoration: none; color: #B87432;">Personal website</a></div>
+                <div class="project-image"><img src="images/dathan_project.png" class="profile"></div>
+                <div class="project-title"><a href="https://atypicality.github.io/WebSystemsFall2025_DathanLang/"
+                        style="text-decoration: none; color: #B87432;">Personal Website</a></div>
             </div>
 
-            <div class="project">
-                <div class="project-image"><img src="images/Lalaproejct.png" class="profile" alt="Project Name"></div>
-                <div class="project-title">Schedule Sharing</div>
+            <div class="project"><img src="images/scheduleSyncLogo.png" class="profile">
+                <div class="project-title"><a href="https://github.com/RPI-ITWS/ITWS1100-F24-team01"
+                        style="text-decoration: none; color: #B87432;">ScheduleSync Website</a></div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -58,28 +64,28 @@
         <h1 style="font-size: 2.7rem;">MEET OUR TEAM</h1>
         <div class="projects">
             <div class="project">
-                <div class="project-image"><img src="images/Jodie.jpg" class = "profile"></div>
+                <div class="project-image"><img src="images/Jodie.jpg" class="profile"></div>
                 <div class="project-title">Jodie Cho</div>
             </div>
             <div class="project">
-                <div class="project-image"><img src="images/dathan.jpg" class = "profile"></div>
+                <div class="project-image"><img src="images/dathan.jpg" class="profile"></div>
                 <div class="project-title">Dathan Lang</div>
             </div>
 
 
             <div class="project">
-                <div class="project-image"><img src="images/Lala.jpg" class = "profile1"></div>
+                <div class="project-image"><img src="images/Lala.jpg" class="profile1"></div>
                 <div class="project-title">Lala Liu</div>
             </div>
         </div>
         <div class="projects2">
             <div class="project">
-                <div class="project-image"><img src="images/somey.JPG" class = "profile2"></div>
-                <div class="project-title">Somey Dong</div>
+                <div class="project-image"><img src="images/somey.JPG" class="profile2"></div>
+                <div class="project-title">SoMey Dong</div>
             </div>
 
             <div class="project">
-                <div class="project-image"><img src="images/oliver.JPG" class = "profile"></div>
+                <div class="project-image"><img src="images/oliver.JPG" class="profile"></div>
                 <div class="project-title">Oliver Crotty</div>
             </div>
 
@@ -91,7 +97,7 @@
     </section>
 
     <footer id="contacts">
-        <p>&copy; 2025 GROUP NAME. All rights reserved.</p>
+        <p>&copy; 2025 Gatcha!. All rights reserved.</p>
     </footer>
 
     <!-- Scripts -->
