Eighth Wonder Description

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -41,7 +41,10 @@
                 <div class="project-image"><img src="images/eighth.png" id="profile" alt="8th Wonder Website"></div>
                 <div class="project-title"><a href = "https://github.com/RPI-ITWS/ITWS1100-S25-team04" style="text-decoration: none; color: #B87432;">8th wonder website</a></div>
                 <div class="project-desc">
-
+                    <p>We designed a website for RPI's Eighth Wonder K-pop and street dancing club. The site contains
+                        information for prospective members, a calender to track club activities and a form to sign up
+                        to the club's waiting list. We made use of HTML, CSS, JavaScript, PHP, and SQL for the Eighth 
+                        Wonder website</p>
                 </div>
             </div>
 
