Project description update
reworded the Eighth Wonder description and added the ScheduleSync description

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -42,9 +42,9 @@
                 <div class="project-title"><a href = "https://github.com/RPI-ITWS/ITWS1100-S25-team04" style="text-decoration: none; color: #B87432;">8th wonder website</a></div>
                 <div class="project-desc">
                     <p>We designed a website for RPI's Eighth Wonder K-pop and street dancing club. The site contains
-                        information for prospective members, a calender to track club activities and a form to sign up
-                        to the club's waiting list. We made use of HTML, CSS, JavaScript, PHP, and SQL for the Eighth 
-                        Wonder website</p>
+                        information about the club and its activities for prospective members, a calender to track club 
+                        activities, and a form to sign up to the club's waiting list. We made use of HTML, CSS, JavaScript, 
+                        PHP, and MySQL for the Eighth Wonder website</p>
                 </div>
             </div>
 
@@ -56,9 +56,12 @@
             </div>
 
             <div class="project">
-                <div class="project-image"></div>
-                <div class="project-title">Project name</div>
+                <div class="project-image"><img src="./images/ScheduleSync.png" id = "profile"></div>
+                <div class="project-title">ScheduleSync</div>
                 <div class="project-desc">
+                    <p>We developed ScheduleSync, a web application which allows students to upload their schedules into 
+                        ScheduleSync's database and compare their schedules to other students to find out which classes 
+                        they share. We used MySQL to store the data and PHP to upload it to the database</p>
                 </div>
             </div>
         </div>
