--- a/lab1/index.html
+++ b/lab1/index.html
@@ -15,7 +15,7 @@
     <nav>
         <h1 class="title" style="margin-left: -65px;">
             <a href="#home">
-                <img src="images/webSysLogo.png" alt="GAT₵HA Logo" style="width: 50%;" />
+                <img src="images/webSysLogo.png" alt="GAT₵HA Logo" style="width: 50%; margin-top: 10px;" />
             </a>
         </h1>
         <ul>
