lifeline project adding

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -49,9 +49,12 @@
             </div>
 
             <div class="project">
-                <div class="project-image"><img src="resources/images/dathan_project.png" class="profile"></div>
-                <div class="project-title"><a href="https://atypicality.github.io/WebSystemsFall2025_DathanLang/"
-                        style="text-decoration: none; color: #B87432;">Personal Website</a></div>
+                <div class="project-image"><img src="resources/images/Lifeline.png" class="profile"></div>
+                <div class="project-title"><a href="https://github.com/RPI-ITWS/ITWS1100-F24-team10"
+                        style="text-decoration: none; color: #B87432;">Lifeline Website</a></div>
+                <div class="project-desc">
+                    <p></p>
+                </div>
             </div>
 
             <div class="project">
