--- a/lab1/index.html
+++ b/lab1/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/styles.css">
-    <!-- <link rel="icon" href="resources/images/webSysLogo.png" type="image/png">  TBD -->
-    <title>✦ GAT₵HA ✦</title>
+    <link rel="icon" href="resources/images/bubble-tea.png" type="image/png">
+    <title>GAT₵HA</title>
 </head>
 
 <body>
@@ -19,10 +19,10 @@
             </a>
         </h1>
         <ul>
-            <li><a href="#home" class="nav-button">HOME</a></li>
-            <li><a href="#gallery" class="nav-button">OUR PROJECTS</a></li>
-            <li><a href="#about-us" class="nav-button">ABOUT US</a></li>
-            <li><a href="#contacts" class="nav-button">CONTACTS</a></li>
+            <li><a href="#" id="link1" class="nav-button">HOME</a></li>
+            <li><a href="#" id="link2" class="nav-button">OUR PROJECTS</a></li>
+            <li><a href="#" id="link3" class="nav-button">ABOUT US</a></li>
+            <li><a href="#" id="link4" class="nav-button">CONTACTS</a></li>
         </ul>
     </nav>
 
@@ -113,6 +113,7 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="resources/jquery-3.7.1.min.js"></script>
     <script src="resources/script.js"></script>
 
 </body>
