links and lifeline description

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -44,7 +44,8 @@
                     <p>We designed a website for RPI's Eighth Wonder K-pop and street dancing club. The site contains
                         information about the club and its activities for prospective members, a calender to track club 
                         activities, and a form to sign up to the club's waiting list. We made use of HTML, CSS, JavaScript, 
-                        PHP, and MySQL for the Eighth Wonder website</p>
+                        PHP, and MySQL for the Eighth Wonder website
+                    </p>
                 </div>
             </div>
 
@@ -53,7 +54,10 @@
                 <div class="project-title"><a href="https://github.com/RPI-ITWS/ITWS1100-F24-team10"
                         style="text-decoration: none; color: #B87432;">Lifeline Website</a></div>
                 <div class="project-desc">
-                    <p></p>
+                    <p>We developed Lifeline, a web application for tracking assignments and deadlines. The site lets people 
+                        upload assignments and their deadlines and displays them in an easily visible way. We made use of HTML, 
+                        CSS, and JavaScript
+                    </p>
                 </div>
             </div>
 
@@ -64,7 +68,8 @@
                 <div class="project-desc">
                     <p>We developed ScheduleSync, a web application which allows students to upload their schedules into 
                         ScheduleSync's database and compare their schedules to other students to find out which classes 
-                        they share. We used MySQL to store the data and PHP to upload it to the database</p>
+                        they share. We used MySQL to store the data and PHP to upload it to the database
+                    </p>
                 </div>
             </div>
         </div>
@@ -75,35 +80,34 @@
         <h1 style="font-size: 2.7rem;">MEET OUR TEAM</h1>
         <div class="projects">
             <div class="project">
-                <div class="project-image"><img src="resources/images/Jodie.jpg" class="profile"></div>
-                <div class="project-title">Jodie Cho</div>
+                <div class="project-image"><a href="https://github.com/finestra771"><img src="resources/images/Jodie.jpg" class="profile"></a></div>
+                <div class="project-title"><a href="https://github.com/finestra771">Jodie Cho</a></div>
             </div>
             <div class="project">
-                <div class="project-image"><img src="resources/images/dathan.jpg" class="profile"></div>
-                <div class="project-title">Dathan Lang</div>
+                <div class="project-image"><a href="https://atypicality.github.io/WebSystemsFall2025_DathanLang/"><img src="resources/images/dathan.jpg" class="profile"></a></div>
+                <div class="project-title"><a href="https://atypicality.github.io/WebSystemsFall2025_DathanLang/">Dathan Lang</a></div>
             </div>
 
 
             <div class="project">
-                <div class="project-image"><img src="resources/images/Lala.jpg" class="profile1"></div>
-                <div class="project-title">Lala Liu</div>
+                <div class="project-image"><a href="https:/www.linkedin.com/in/lala-liu"><img src="resources/images/Lala.jpg" class="profile1"></a></div>
+                <div class="project-title"><a href="https:/www.linkedin.com/in/lala-liu">Lala Liu</a></div>
             </div>
         </div>
         <div class="projects2">
             <div class="project">
-                <div class="project-image"><img src="resources/images/somey.JPG" class = "profile2"></div>
-
-                <div class="project-title">SoMey Dong</div>
+                <div class="project-image"><a href="https://www.linkedin.com/in/somey-dong-4bb579385/"><img src="resources/images/somey.JPG" class = "profile2"></a></div>
+                <div class="project-title"><a href="https://www.linkedin.com/in/somey-dong-4bb579385/">SoMey Dong</a></div>
             </div>
 
             <div class="project">
-                <div class="project-image"><img src="resources/images/oliver.JPG" class="profile"></div>
-                <div class="project-title">Oliver Crotty</div>
+                <div class="project-image"><a href="https://www.linkedin.com/in/olivercrotty/"><img src="resources/images/oliver.JPG" class="profile"></a></div>
+                <div class="project-title"><a href="https://www.linkedin.com/in/olivercrotty/">Oliver Crotty</a></div>
             </div>
 
             <div class="project">
-                <div class="project-image"></div>
-                <div class="project-title">Zhimin Jiang</div>
+                <div class="project-image"><a href="https://github.com/zhiminxCode"><img src="resources/images/Zhimin.png" class="profile1"></a></div>
+                <div class="project-title"><a href="https://github.com/zhiminxCode">Zhimin Jiang</a></div>
             </div>
         </div>
     </section>
