finished lab1.md

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -44,7 +44,7 @@
                     <p>We designed a website for RPI's Eighth Wonder K-pop and street dancing club. The site contains
                         information about the club and its activities for prospective members, a calender to track club 
                         activities, and a form to sign up to the club's waiting list. We made use of HTML, CSS, JavaScript, 
-                        PHP, and MySQL for the Eighth Wonder website
+                        PHP, and MySQL for the Eighth Wonder website.
                     </p>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                 <div class="project-desc">
                     <p>We developed Lifeline, a web application for tracking assignments and deadlines. The site lets people 
                         upload assignments and their deadlines and displays them in an easily visible way. We made use of HTML, 
-                        CSS, and JavaScript
+                        CSS, and JavaScript.
                     </p>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 <div class="project-desc">
                     <p>We developed ScheduleSync, a web application which allows students to upload their schedules into 
                         ScheduleSync's database and compare their schedules to other students to find out which classes 
-                        they share. We used MySQL to store the data and PHP to upload it to the database
+                        they share. We used MySQL to store the data and PHP to upload it to the database.
                     </p>
                 </div>
             </div>
