this is just to ensure consistency and good site design

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -14,7 +14,7 @@
     <!-- Navigation Bar -->
     <nav>
         <h1 class="title" style="margin-left: -65px;">
-            <a href="#home">
+            <a href="#" id="link0">
                 <img src="resources/images/webSysLogo.png" alt="GAT₵HA Logo" style="width: 50%; margin-top: 10px;" />
             </a>
         </h1>
