error, incorrect amendment
unless im stupid this is amendment one, the previous thing was a article for some reason, prob copying bug

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -608,8 +608,9 @@
         <div class="content">
             <article class="article">
                 <p>
-                    The Ratification of the Conventions of nine States, shall be sufficient for the Establishment of this Constitution between 
-                    the States so ratifying the Same.
+                    Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging
+                    the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the Government 
+                    for a redress of grievances.
                 </p>
             </article>
         </div>
